# autodeployed-agent-example

./: .bedrock_agentcore.yaml  .dockerignore  CLAUDE.md  Dockerfile  README.md  agent.py  pyproject.toml
.github/workflows/: deploy-agent.yml
agentcore/: agentcore.json  aws-targets.json
agentcore/cdk/: package-lock.json
